// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exclude_nested > should correctly exclude nested paths 1`] = `
"--------------------
arguments: --check !foo/bar/error.js
working directory: fixtures/exclude_nested
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 3 files using 1 threads.
--- STDERR ---------

--------------------
--------------------
arguments: --check !foo/bar
working directory: fixtures/exclude_nested
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 2 files using 1 threads.
--- STDERR ---------

--------------------
--------------------
arguments: --check !foo
working directory: fixtures/exclude_nested
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------
--------------------
arguments: --check !**/error.js
working directory: fixtures/exclude_nested
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 3 files using 1 threads.
--- STDERR ---------

--------------------
--------------------
arguments: --check foo !foo/bar/error.js
working directory: fixtures/exclude_nested
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 2 files using 1 threads.
--- STDERR ---------

--------------------
--------------------
arguments: --check foo !foo/bar
working directory: fixtures/exclude_nested
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------
--------------------
arguments: --check foo !**/bar/error.js
working directory: fixtures/exclude_nested
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 2 files using 1 threads.
--- STDERR ---------

--------------------
--------------------
arguments: --check foo !**/bar/*
working directory: fixtures/exclude_nested
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`exclude_nested > should correctly exclude nested paths with dot - set 1 1`] = `
"--------------------
arguments: --check . !foo/bar/error.js
working directory: fixtures/exclude_nested
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 3 files using 1 threads.
--- STDERR ---------

--------------------
--------------------
arguments: --check . !foo/bar
working directory: fixtures/exclude_nested
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 2 files using 1 threads.
--- STDERR ---------

--------------------
--------------------
arguments: --check . !foo
working directory: fixtures/exclude_nested
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------
--------------------
arguments: --check . !**/error.js
working directory: fixtures/exclude_nested
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 3 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`exclude_nested > should correctly exclude nested paths with dot - set 2 1`] = `
"--------------------
arguments: --check ./foo !**/bar/error.js
working directory: fixtures/exclude_nested
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 2 files using 1 threads.
--- STDERR ---------

--------------------
--------------------
arguments: --check ./foo !**/error.js
working directory: fixtures/exclude_nested
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 2 files using 1 threads.
--- STDERR ---------

--------------------
--------------------
arguments: --check ./foo !**/bar/*
working directory: fixtures/exclude_nested
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------
--------------------
arguments: --check ./foo !foo/bar/error.js
working directory: fixtures/exclude_nested
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 2 files using 1 threads.
--- STDERR ---------

--------------------
--------------------
arguments: --check ./foo !foo/bar
working directory: fixtures/exclude_nested
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;
